workshops/knative-traffic-management/canary/canary.yaml
apiVersion: serving.knative.dev/v1
kind: Service
metadata:
  name: greeter
  namespace: default
spec:
  template:
    metadata:
      name: greeter-canary-v1
    spec:
      containers:
        - image: quay.io/rhdevelopers/knative-tutorial-greeter:quarkus
          env:
            - name: MESSAGE_PREFIX
              value: Namaste
          livenessProbe:
            httpGet:
              path: /healthz
          readinessProbe:
            httpGet:
              path: /healthz
  traffic:
    - tag: v1
      revisionName: greeter-canary-v1
      percent: 20
    - tag: v2
      revisionName: greeter-canary-v2
      percent: 80
