workshops/knative-traffic-management/canary/blue-green-demo-route.yaml
apiVersion: serving.knative.dev/v1
kind: Route
metadata:
  name: blue-green-demo # The name of our route; appears in the URL to access the app
  namespace: knative-serving # The namespace we're working in; also appears in the URL to access the app
spec:
  traffic:
    - revisionName: blue-green-demo-00001
      percent: 80 # All traffic goes to this revision
    - revisionName: blue-green-demo-00002
      percent: 20 # 0% of traffic routed to the second revision
      tag: v2 # A named route
